# ai-strict-num

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: main.yml
src/: lib.rs
