[package]
name = "ai-strict-num"
version = "0.2.0"
authors = ["Yevhenii Reizner <razrfalcon@gmail.com>"]
license = "MIT"
description = "A no_std fork of strict-num"
repository = "https://github.com/atom-planet-embrace/ai-strict-num"
documentation = "https://docs.rs/ai-strict-num/"
categories = ["mathematics", "no-std"]
readme = "README.md"
edition = "2021"
rust-version = "1.68"

[dependencies]
float-cmp = { version = "0.10", default-features = false, optional = true }
serde = { version = "1", optional = true }

[dev-dependencies]
serde_json = "1"

[features]
default = ["approx-eq"]

# Implements `ApproxEq` and `ApproxEqUlps` traits for floating point numbers
# via the `float-cmp` crate.
approx-eq = ["float-cmp"]

std = ["float-cmp/std"]
